Fixed some weird spacing issues with the panels.

--- a/framework/static/framework/css/main.css
+++ b/framework/static/framework/css/main.css
@@ -14,11 +14,10 @@
 .panel{
 	border-radius: 10px;
 	border-style: solid;
-	border-width: 2px;
+	border-width: 1px;
 	border-color: black;
 	
 	margin-bottom: 10px;
 	padding: 10px;
-	box-shadow: 7px 7px 5px gray;
 }
 
